# WebsitewithFlask

./: README.md
SimpleWebwithFlask/: forms.py  models.py  noteapp.py  pyproject.toml
SimpleWebwithFlask/static/css/: index.css
SimpleWebwithFlask/templates/: base.html  create_post.html  edit_post.html  edit_profile.html  index.html  latest_uploads.html  login.html  most_played.html  post.html  profile.html  register.html  top_played.html  top_rate.html
